--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "tsx src/index.ts",
 	"build":"npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
