--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,7 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "baseUrl": "src",
-    "outDir": "dist",
-    "sourceMap": true,
-    "noImplicitAny": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": [
-    "src/**/*"
-  ],
+    "esModuleInterop": true,
+    "outDir": "./dist"
+  }
 }
